--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-i# To run:
+# To run:
 # docker build -t redoc .
 # docker run -it --rm -p 80:80 -e SPEC_URL='http://localhost:8000/swagger.yaml' redoc
 # Ensure http://localhost:8000/swagger.yaml is served with cors. A good solution is:
@@ -52,5 +52,4 @@ RUN chgrp -R 0 /etc/nginx && \
 
 EXPOSE 80
 
-CMD ["sh", "/usr/local/bin/docker-run.sh"]
-
+CMD ["sh", "/usr/local/bin/docker-run.s
